[gd_scene load_steps=2 format=3 uid="uid://spaceexplorationui"]

[ext_resource type="Script" path="res://SpaceExplorationUI.gd" id=1]

[node name="SpaceExplorationUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="GalaxyMapPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="GalaxyMapVBox" type="VBoxContainer" parent="GalaxyMapPanel"]
layout_mode = 2

[node name="GalaxyMapTitle" type="Label" parent="GalaxyMapPanel/GalaxyMapVBox"]
layout_mode = 2
text = "Galaxy Map"
horizontal_alignment = 1

[node name="GalaxyList" type="VBoxContainer" parent="GalaxyMapPanel/GalaxyMapVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseGalaxyMap" type="Button" parent="GalaxyMapPanel/GalaxyMapVBox"]
layout_mode = 2
text = "Close"

[node name="PlanetInfoPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="PlanetInfoVBox" type="VBoxContainer" parent="PlanetInfoPanel"]
layout_mode = 2

[node name="PlanetInfoTitle" type="Label" parent="PlanetInfoPanel/PlanetInfoVBox"]
layout_mode = 2
text = "Planet Information"
horizontal_alignment = 1

[node name="CurrentPlanetNameLabel" type="Label" parent="PlanetInfoPanel/PlanetInfoVBox"]
layout_mode = 2
text = "No planet selected."

[node name="PlanetTypeLabel" type="Label" parent="PlanetInfoPanel/PlanetInfoVBox"]
layout_mode = 2
text = ""

[node name="HabitabilityLabel" type="Label" parent="PlanetInfoPanel/PlanetInfoVBox"]
layout_mode = 2
text = ""

[node name="PopulationLabel" type="Label" parent="PlanetInfoPanel/PlanetInfoVBox"]
layout_mode = 2
text = ""

[node name="PlanetResourcesLabel" type="Label" parent="PlanetInfoPanel/PlanetInfoVBox"]
layout_mode = 2
text = ""
autowrap_mode = 2

[node name="ClosePlanetInfo" type="Button" parent="PlanetInfoPanel/PlanetInfoVBox"]
layout_mode = 2
text = "Close"

[node name="TerraformingPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="TerraformingVBox" type="VBoxContainer" parent="TerraformingPanel"]
layout_mode = 2

[node name="TerraformingTitle" type="Label" parent="TerraformingPanel/TerraformingVBox"]
layout_mode = 2
text = "Terraforming Options"
horizontal_alignment = 1

[node name="TerraformButton" type="Button" parent="TerraformingPanel/TerraformingVBox"]
layout_mode = 2
text = "Terraform Planet"

[node name="RebuildButton" type="Button" parent="TerraformingPanel/TerraformingVBox"]
layout_mode = 2
text = "Rebuild Planet"

[node name="CloseTerraforming" type="Button" parent="TerraformingPanel/TerraformingVBox"]
layout_mode = 2
text = "Close"

[node name="TravelMenuPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
visible = false

[node name="TravelMenuVBox" type="VBoxContainer" parent="TravelMenuPanel"]
layout_mode = 2

[node name="TravelMenuTitle" type="Label" parent="TravelMenuPanel/TravelMenuVBox"]
layout_mode = 2
text = "Travel Menu"
horizontal_alignment = 1

[node name="FuelLabel" type="Label" parent="TravelMenuPanel/TravelMenuVBox"]
layout_mode = 2
text = "Fuel: 100 / 100"

[node name="TravelDestinationList" type="VBoxContainer" parent="TravelMenuPanel/TravelMenuVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseTravelMenu" type="Button" parent="TravelMenuPanel/TravelMenuVBox"]
layout_mode = 2
text = "Close"
